[gd_scene load_steps=6 format=3 uid="uid://45ikn7pxphwr"]

[ext_resource type="Script" uid="uid://csljw2q55bf7r" path="res://script/enemy/enemy.gd" id="1_h08p8"]
[ext_resource type="Texture2D" uid="uid://dghmt6s8i018q" path="res://sprites/character/PlayerCostas.png" id="3_b7koy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yvcfn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_b7koy")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f87vc"]
radius = 281.187

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f87vc"]
size = Vector2(32, 32)

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_h08p8")

[node name="texture" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yvcfn")
autoplay = "default"
frame = 1
frame_progress = 1.0

[node name="detection_area" type="Area2D" parent="."]

[node name="detection_collision" type="CollisionShape2D" parent="detection_area"]
visible = false
shape = SubResource("CircleShape2D_f87vc")

[node name="AttackArea" type="Area2D" parent="."]

[node name="attack_collision" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_f87vc")

[connection signal="animation_finished" from="texture" to="." method="_on_animation_finished"]
[connection signal="area_shape_exited" from="detection_area" to="." method="_on_detection_area_area_shape_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
